--- a/wp-content/themes/flieber/src/styles/components/cards.scss
+++ b/wp-content/themes/flieber/src/styles/components/cards.scss
@@ -30,6 +30,9 @@ section#why {
     column-gap: 20px;
     justify-content: space-around;
 
+    @include tablet {
+      grid-template-columns: 1fr 1fr;
+    }
     @include phone {
       grid-template-columns: 1fr;
     }
@@ -61,7 +64,7 @@ section#why {
 
     &__title {
       color: $secondary-color;
-      font-size: 36px;
+      font-size: size(36);
       font-weight: bold;
       padding-bottom: 30px;
     }
