--- a/wp-content/themes/flieber/src/styles/pages/our-solution.scss
+++ b/wp-content/themes/flieber/src/styles/pages/our-solution.scss
@@ -180,7 +180,7 @@
 
       &__text {
         color: #fff;
-        font-size: 20px;
+        font-size: size(20);
         line-height: 40px;
         margin-top: 90px;
         font-family: $base-font;
@@ -254,6 +254,7 @@
       width: 100%;
 
       @include phone {
+        display: none;
         margin-bottom: 30px;
         padding-right: 0;
       }
@@ -269,6 +270,10 @@
         height: auto;
         margin-right: 65px;
         width: auto;
+
+        @include phone {
+          padding-bottom: 20px;
+        }
       }
 
       &__box {
@@ -278,7 +283,7 @@
         margin-bottom: 90px;
         .title {
           color: $primary-color;
-          font-size: 40px;
+          font-size: size(40);
         }
         &:nth-child(odd) {
           .title {
@@ -288,6 +293,7 @@
         @include phone {
           text-align: center;
           padding: 0 30px;
+          flex-direction: column;
 
           img {
             margin: 0 auto;
@@ -303,7 +309,7 @@
 
       &__description {
         color: $text;
-        font-size: 20px;
+        font-size: size(20);
         line-height: 30px;
       }
     }
@@ -331,7 +337,7 @@
       &__number {
         color: #161b35;
         border-bottom: 1px solid $secondary-color;
-        font-size: 120px;
+        font-size: size(120);
         display: inline-block;
         margin-bottom: 45px;
       }
