--- a/wp-content/themes/flieber/src/styles/pages/our-solution.scss
+++ b/wp-content/themes/flieber/src/styles/pages/our-solution.scss
@@ -134,7 +134,12 @@
       &__brand {
         max-width: 85%;
         margin: 0 auto;
-        padding: 10% 0 60px 0;
+        padding: 0;
+        height: 100vh;
+        display: flex;
+        align-items: baseline;
+        flex-direction: column;
+        justify-content: center;
 
         @include phone {
           max-width: 90%;
@@ -182,7 +187,7 @@
         color: #fff;
         font-size: size(20);
         line-height: 40px;
-        margin-top: 90px;
+        // margin-top: 90px;
         font-family: $base-font;
 
         @include phone {
