--- a/wp-content/themes/flieber/src/styles/pages/resources.scss
+++ b/wp-content/themes/flieber/src/styles/pages/resources.scss
@@ -20,41 +20,70 @@
 
   main {
     position: relative;
-    overflow: hidden;
 
-    &:before {
-      content: "";
+    .image__plx {
+      background-color: transparent;
+      height: 30%;
       position: absolute;
-      top: 0;
-      right: 0;
-      width: 0;
-      height: 0;
-      border-top: solid 0 transparent;
-      border-left: solid 0 transparent;
-      border-right: solid 600px $secondary-color;
-      border-bottom: solid 400px transparent;
-      z-index: 2;
+      width: 100%;
 
-      @include phone {
-        border-right: solid 200px #2ea6d0;
-        border-bottom: solid 100px transparent;
+      @include lg-desktop() {
+        height: 130vh;
       }
-    }
-    &:after {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 0;
-      height: 0;
-      border-top: solid 0 transparent;
-      border-left: solid 2000px #273042;
-      border-right: solid 0 transparent;
-      border-bottom: solid 900px transparent;
-      z-index: 0;
 
       @include phone {
-        border-bottom: solid 715px transparent;
+        height: 100vh;
+      }
+
+      .blue {
+        background: linear-gradient(
+          to top right,
+          transparent 0%,
+          transparent 50%,
+          $secondary-color 50%,
+          $secondary-color 100%
+        );
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 60%;
+        height: 70%;
+        z-index: 2;
+
+        @include phone {
+          display: none;
+        }
+      }
+
+      .white {
+        background: linear-gradient(
+          to bottom right,
+          transparent 0%,
+          transparent 50%,
+          #ffffff 50%,
+          #ffffff 100%
+        );
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 65%;
+        z-index: 1;
+
+        @include phone {
+          display: none;
+        }
+      }
+
+      .dark {
+        background: transparent url("./images/BG_blog.jpg") bottom left
+          no-repeat;
+        background-attachment: fixed;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
       }
     }
   }
