--- a/wp-content/themes/flieber/src/styles/components/cards.scss
+++ b/wp-content/themes/flieber/src/styles/components/cards.scss
@@ -36,6 +36,9 @@ section#why {
     @include phone {
       grid-template-columns: 1fr;
     }
+    @include widescreen {
+      column-gap: 30px;
+    }
   }
 
   .card {
@@ -45,6 +48,10 @@ section#why {
     border: 2px solid transparent;
     transition: all 0.5s ease;
     display: inline-block;
+
+    @include widescreen {
+      padding: 60px 35px 85px;
+    }
 
     &:hover {
       border: 2px solid $secondary-color;
@@ -67,6 +74,10 @@ section#why {
       font-size: size(36);
       font-weight: bold;
       padding-bottom: 30px;
+
+      @include widescreen {
+        font-size: 30px;
+      }
     }
 
     &__description {
