--- a/wp-content/themes/flieber/src/styles/pages/our-vision.scss
+++ b/wp-content/themes/flieber/src/styles/pages/our-vision.scss
@@ -28,6 +28,10 @@
       position: absolute;
       width: 100%;
 
+      @include widescreen {
+        height: 20%;
+      }
+
       @include lg-desktop() {
         height: 130vh;
       }
@@ -47,8 +51,8 @@
         position: absolute;
         top: 0;
         right: 0;
-        width: 60%;
-        height: 70%;
+        width: 32%;
+        height: 36%;
         z-index: 2;
 
         @include phone {
@@ -87,6 +91,29 @@
         left: 0;
         width: 100%;
         height: 100%;
+
+        @include widescreen {
+          background-position-y: 16rem;
+        }
+      }
+    }
+
+    .box__social {
+      display: flex;
+      flex-direction: column;
+      position: absolute;
+      right: 2%;
+      top: 12%;
+      z-index: 9999;
+      @include phone {
+        display: none;
+      }
+      a {
+        margin-bottom: 30px;
+        transition: all 0.5s ease;
+        &:hover {
+          transform: scale(1.2);
+        }
       }
     }
   }
@@ -107,6 +134,10 @@
     h1 {
       color: $secondary-color;
       font-size: 72px;
+
+      @include widescreen {
+        margin-top: 0;
+      }
 
       @include phone {
         font-size: 48px;
@@ -143,6 +174,10 @@
         flex-direction: column;
         justify-content: center;
 
+        @include widescreen {
+          max-width: 93%;
+        }
+
         @include phone {
           max-width: 90%;
           padding: 50px 0;
@@ -171,6 +206,10 @@
         @include phone {
           margin-top: 30px;
         }
+
+        @include widescreen {
+          font-size: 40px;
+        }
       }
 
       &__description {
@@ -183,6 +222,9 @@
           font-size: 16px;
           margin: 30px;
         }
+        @include widescreen {
+          font-size: 24px;
+        }
       }
 
       &__text {
@@ -191,6 +233,10 @@
         line-height: 40px;
         // margin-top: 90px;
         font-family: $base-font;
+
+        @include widescreen {
+          font-size: 24px;
+        }
       }
 
       &__social {
