--- a/wp-content/themes/flieber/src/styles/pages/resources.scss
+++ b/wp-content/themes/flieber/src/styles/pages/resources.scss
@@ -27,6 +27,10 @@
       position: absolute;
       width: 100%;
 
+      @include widescreen {
+        height: 1075px;
+      }
+
       @include lg-desktop() {
         height: 130vh;
       }
@@ -46,8 +50,8 @@
         position: absolute;
         top: 0;
         right: 0;
-        width: 60%;
-        height: 70%;
+        width: 32%;
+        height: 36%;
         z-index: 2;
 
         @include phone {
@@ -76,14 +80,16 @@
       }
 
       .dark {
-        background: transparent url("./images/BG_blog.jpg") bottom left
-          no-repeat;
+        background: #343f53 url("./images/BG_blog.jpg") bottom left no-repeat;
         background-attachment: fixed;
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
+
+        @include widescreen {
+        }
       }
     }
   }
@@ -109,6 +115,10 @@
       @include phone {
         width: 100%;
       }
+
+      @include widescreen {
+        width: 65%;
+      }
     }
 
     h2 {
@@ -122,6 +132,10 @@
       @include phone {
         font-size: 30px;
       }
+
+      @include widescreen {
+        font-size: 75px;
+      }
     }
 
     p {
@@ -131,7 +145,7 @@
 
     form {
       align-items: center;
-      border-bottom: 1px solid #5a6375;
+      border-bottom: 1px solid #707b90;
       display: flex;
       justify-content: space-between;
       margin-top: 40px;
@@ -145,7 +159,7 @@
         font-size: 16px;
         width: 80%;
         &::placeholder {
-          color: #5a6375;
+          color: #707b90;
         }
       }
 
