--- a/wp-content/themes/flieber/src/styles/pages/our-solution.scss
+++ b/wp-content/themes/flieber/src/styles/pages/our-solution.scss
@@ -68,7 +68,7 @@
         bottom: 0;
         right: 0;
         width: 100%;
-        height: 65%;
+        height: 75%;
         z-index: 1;
 
         @include phone {
@@ -86,7 +86,7 @@
         width: 100%;
         height: 100%;
 
-        @include widescreen {
+        @media screen and (min-width: 1500px) {
           background-size: cover;
         }
       }
@@ -257,9 +257,9 @@
   // OPTION ==============================
   #option {
     align-items: center;
-    display: flex;
-
+    display: grid;
     position: relative;
+    grid-template-columns: 1fr 1fr;
     z-index: 1;
 
     @include phone {
@@ -283,9 +283,15 @@
         width: 100%;
       }
 
+      &__img {
+        margin-right: 2rem;
+        max-width: 113px;
+        text-align: center;
+        width: 100%;
+      }
+
       &__image {
         height: auto;
-        margin-right: 65px;
         width: auto;
 
         @include phone {
@@ -326,6 +332,7 @@
 
       &__description {
         color: $text;
+        font-family: $base-font;
         font-size: size(20);
         line-height: 30px;
       }
@@ -345,6 +352,11 @@
       &__title {
         color: $secondary-color;
       }
+
+      &__description {
+        font-family: $base-font;
+        padding: 0 12rem;
+      }
     }
 
     .card {
@@ -359,15 +371,22 @@
       }
 
       &__number {
+        font-family: $base-font;
         color: #161b35;
         border-bottom: 1px solid $secondary-color;
-        font-size: size(120);
+        font-size: size(70);
         display: inline-block;
         margin-bottom: 45px;
       }
 
+      &__title {
+        font-size: 1.5rem;
+        padding-bottom: 20px;
+      }
+
       &__description {
-        font-size: 20px;
+        font-family: $base-font;
+        font-size: 1rem;
       }
     }
   }
