--- a/wp-content/themes/flieber/src/styles/components/cards.scss
+++ b/wp-content/themes/flieber/src/styles/components/cards.scss
@@ -44,12 +44,12 @@ section#why {
   .card {
     font-family: $second-font;
     box-shadow: 0px 30px 22px -12px rgba(0, 0, 0, 0.26);
-    padding: 60px 25px 85px;
+    padding: 1rem 1rem 2rem;
     border: 2px solid transparent;
-    transition: all 0.5s ease;
+    // transition: all 0.5s ease;
     display: inline-block;
 
-    @include widescreen {
+    @media screen and (min-width: 1500px) {
       padding: 60px 35px 85px;
     }
 
