--- a/wp-content/themes/flieber/src/styles/pages/resources.scss
+++ b/wp-content/themes/flieber/src/styles/pages/resources.scss
@@ -133,7 +133,7 @@
         font-size: 30px;
       }
 
-      @include widescreen {
+      @media screen and (min-width: 1500px) {
         font-size: 75px;
       }
     }
